--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
       <version>5.3.3</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+    <dependency>
+      <groupId>org.thymeleaf.extras</groupId>
+      <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+      <version>3.0.4.RELEASE</version>
+    </dependency>
+
+
 
 
     <!--    THYMELEAF-->
